# text-translator

./: .env  .gitignore  main.py  pyproject.toml  translate.py
.github/: copilot-instructions.md
