[project]
name = "text-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "generativeai>=0.0.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
]
